--- a/styles/main.css
+++ b/styles/main.css
@@ -14,9 +14,34 @@
  * limitations under the License.
  */
 
+
+{
+  margin: 0;
+  padding 0;
+  font-family: tahoma, sans-serif
+  box-sizing: border-box;
+}
+
+
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
+background: #1ddced;
 }
+
+.chatbox{
+  width:500px;
+  min-width:390px;
+  height: 600px;
+  background:#fff;
+  padding: 25px;
+  margin:20px;auto;
+}
+
+
+
+
+
+
 main, #messages-card {
   height: 100%;
   padding-bottom: 0;
