Fixed About Page

--- a/styles/aboutpagemain.css
+++ b/styles/aboutpagemain.css
@@ -12,3 +12,16 @@ h2{
 	font-family:Lobster ;
 }
 
+html {
+    font-family:sans-serif;
+  }
+
+   body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1 0 auto;
+  }
