--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,4 @@
+
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
@@ -196,4 +197,21 @@ main, #messages-card {
 .mdl-button .material-icons {
   top: -1px;
   margin-right: 5px;
+}
+
+#user-pic {
+  background-image: url('/images/profile_placeholder.png');
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 50px;
+  background-size: 50px;
+  border-radius: 30px;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+#nav-bar {
+  padding-left: 10px;
+  padding-right: 10px;
+  font-weight: 200;
 }
