Quickly redid login page
Will modify at a later time with additional sign in/sign up options

--- a/styles/main.css
+++ b/styles/main.css
@@ -37,11 +37,11 @@ main, #messages-card {
   max-width: 1024px;
   margin: auto;
 }
-.material-icons {
+/*.material-icons {
   font-size: 36px;
   top: 8px;
   position: relative;
-}
+}*/
 .mdl-layout__header-row {
   padding: 0;
   margin: 0 auto;
@@ -159,9 +159,9 @@ main, #messages-card {
   padding: 0 6px 0 1px;
   min-width: 0;
 }
-#image-form #submitImage .material-icons {
+/*#image-form #submitImage .material-icons {
   top: -1px;
-}
+}*/
 .message img {
   max-width: 300px;
   max-height: 200px;
@@ -194,11 +194,13 @@ main, #messages-card {
 .mdl-textfield--floating-label.is-focused .mdl-textfield__label {
   color: #0288D1;
 }
-.mdl-button .material-icons {
+/*.mdl-button .material-icons {
   top: -1px;
   margin-right: 5px;
-}
+}*/
 
+
+/*Re-Written*/
 #user-pic {
   background-image: url('/images/profile_placeholder.png');
   background-repeat: no-repeat;
