--- a/styles/main.css
+++ b/styles/main.css
@@ -15,45 +15,8 @@
  * limitations under the License.
  */
 
-
-main, #messages-card {
-  height: 100%;
-  padding-bottom: 0;
-}
-#messages-card-container {
-  height: calc(100% - 150px);
-  padding-bottom: 0;
-}
-#messages-card {
-  margin-top: 15px;
-}
-.mdl-layout__header-row span {
-  margin-left: 15px;
-  margin-top: 17px;
-}
-.mdl-grid {
-  max-width: 1024px;
-  margin: auto;
-}
-/*.material-icons {
-  font-size: 36px;
-  top: 8px;
-  position: relative;
-}*/
-.mdl-layout__header-row {
-  padding: 0;
-  margin: 0 auto;
-}
-.mdl-card__supporting-text {
-  width: auto;
-  height: 100%;
-  padding-top: 0;
-  padding-bottom: 0;
-}
 #messages {
-  overflow-y: auto;
-  margin-bottom: 10px;
-  height: calc(100% - 80px);
+  /*overflow-y: auto;*/
 }
 #message-filler {
   flex-grow: 1;
