Implemented scrolling within chat window
- Chat window displays scroll bar when number of messages exceeds the
screen height
- Scrolls to bottom when a new message is sent or received

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -33,6 +33,6 @@ body {
   color: black;
   margin-top: 6.5px;
   padding: 10px 10px 10px 10px;
-  overflow-y: scroll;
+  overflow-y: auto;
   height: 85vh;
 }
