--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-
 /**
  * Copyright 2015 Google Inc. All Rights Reserved.
  *
@@ -16,165 +15,153 @@
  */
 
 #messages {
-  /*overflow-y: auto;*/
+    /*overflow-y: auto;*/
 }
+
 #message-filler {
-  flex-grow: 1;
+    flex-grow: 1;
 }
+
 .message-container:first-of-type {
-  border-top-width: 0;
+    border-top-width: 0;
 }
+
 .message-container {
-  display: block;
-  margin-top: 10px;
-  border-top: 1px solid #f3f3f3;
-  padding-top: 10px;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
+    display: block;
+    margin-top: 10px;
+    border-top: 1px solid #f3f3f3;
+    padding-top: 10px;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
+
 .message-container.visible {
-  opacity: 1;
+    opacity: 1;
 }
+
 .message-container .pic {
-  background-image: url('/images/profile_placeholder.png');
-  background-repeat: no-repeat;
-  width: 30px;
-  height: 30px;
-  background-size: 30px;
-  border-radius: 20px;
+    background-image: url('/images/profile_placeholder.png');
+    background-repeat: no-repeat;
+    width: 35px;
+    height: 35px;
+    background-size: 35px;
+    border-radius: 30px;
 }
+
 .message-container .spacing {
-  display: table-cell;
-  vertical-align: top;
+    display: table-cell;
+    vertical-align: top;
 }
+
+
+/*message text container*/
+
 .message-container .message {
-  display: table-cell;
-  width: calc(100% - 40px);
-  padding: 5px 0 5px 10px;
-}
-.message-container .name {
-  display: inline-block;
-  width: 100%;
-  padding-left: 40px;
-  color: #bbb;
-  font-style: italic;
-  font-size: 12px;
-  box-sizing: border-box;
-}
-#message-form {
-  display: flex;
-  flex-direction: row;
-  width: calc(100% - 48px);
-  float: left;
-}
-#image-form {
-  display: flex;
-  flex-direction: row;
-  width: 48px;
-  float: right;
-}
-#message-form .mdl-textfield {
-  width: calc(100% - 100px);
-}
-#message-form button, #image-form button {
-  width: 100px;
-  margin: 15px 0 0 10px;
-}
-.mdl-card {
-  min-height: 0;
-}
-.mdl-card {
-  background: linear-gradient(white, #f9f9f9);
-  justify-content: space-between;
-}
-#user-container {
+    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+    color: white;
+    display: table-cell;
+    width: calc(100% - 40px);
+    padding: 5px 10px 5px 10px;
+    background: #009688;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 2px;
+
+  }
+
+.message-container .message:after {
+  content: '';
   position: absolute;
-  display: flex;
-  flex-direction: row;
-  top: 22px;
-  width: 100%;
-  right: 0;
-  padding-left: 10px;
-  justify-content: flex-end;
-  padding-right: 10px;
+  border-style: solid;
+  border-width: 15px 15px 15px 0;
+  border-color: transparent #FFFFFF;
+  display: block;
+  width: 0;
+  z-index: 1;
+  left: -15px;
+  top: 45px;
 }
+
+.message-container .name {
+    display: inline-block;
+    width: 100%;
+    padding-left: 40px;
+    color: #bbb;
+    font-style: italic;
+    font-size: 12px;
+    box-sizing: border-box;
+}
+
+#message-form {
+    display: flex;
+    flex-direction: row;
+    width: calc(100% - 48px);
+    float: left;
+}
+
+#image-form {
+    display: flex;
+    flex-direction: row;
+    width: 48px;
+    float: right;
+}
+
+#message-form #message {
+    width: calc(100% - 100px);
+}
+
+#message-form button, #image-form button {
+    width: 100px;
+    margin: 15px 0 0 10px;
+}
+
+#user-container {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    top: 22px;
+    width: 100%;
+    right: 0;
+    padding-left: 10px;
+    justify-content: flex-end;
+    padding-right: 10px;
+}
+
 #user-container #user-pic {
-  top: -3px;
-  position: relative;
-  display: inline-block;
-  background-image: url('/images/profile_placeholder.png');
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
-  background-size: 40px;
-  border-radius: 20px;
+    top: -3px;
+    position: relative;
+    display: inline-block;
+    background-image: url('/images/profile_placeholder.png');
+    background-repeat: no-repeat;
+    width: 40px;
+    height: 40px;
+    background-size: 40px;
+    border-radius: 20px;
 }
+
 #user-container #user-name {
-  font-size: 16px;
-  line-height: 36px;
-  padding-right: 10px;
-  padding-left: 20px;
+    font-size: 16px;
+    line-height: 36px;
+    padding-right: 10px;
+    padding-left: 20px;
 }
+
 #image-form #submitImage {
-  width: auto;
-  padding: 0 6px 0 1px;
-  min-width: 0;
+    width: auto;
+    padding: 0 6px 0 1px;
+    min-width: 0;
 }
+
+
 /*#image-form #submitImage .material-icons {
   top: -1px;
 }*/
+
 .message img {
-  max-width: 300px;
-  max-height: 200px;
+    max-width: 300px;
+    max-height: 200px;
 }
+
 #mediaCapture {
-  display: none;
-}
-@media screen and (max-width: 610px) {
-  header {
-    height: 113px;
-    padding-bottom: 80px !important;
-  }
-  #user-container {
-    top: 72px;
-    background-color: rgb(3,155,229);
-    height: 38px;
-    padding-top: 3px;
-    padding-right: 2px;
-  }
-  #user-container #user-pic {
-    top: 2px;
-    width: 33px;
-    height: 33px;
-    background-size: 33px;
-  }
-}
-.mdl-textfield__label:after {
-  background-color: #0288D1;
-}
-.mdl-textfield--floating-label.is-focused .mdl-textfield__label {
-  color: #0288D1;
-}
-/*.mdl-button .material-icons {
-  top: -1px;
-  margin-right: 5px;
-}*/
-
-
-/*Re-Written*/
-#user-pic {
-  background-image: url('/images/profile_placeholder.png');
-  background-repeat: no-repeat;
-  width: 50px;
-  height: 50px;
-  background-size: 50px;
-  border-radius: 30px;
-  margin-top: 5px;
-  margin-right: 5px;
-}
-
-#nav-bar {
-  padding-left: 10px;
-  padding-right: 10px;
-  font-weight: 200;
+    display: none;
 }
