--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -37,5 +37,23 @@ body {
 }
 
 #message-interaction {
+
+}
+
+#message-form {
   display: flex;
+  align-items: center;
+}
+
+#message-input {
+  flex-grow: 2;
+  margin-right: 15px;
+}
+
+#email-field {
+  width: 35vw;
+  margin-right: 15px;
+}
+#add-conversation-button {
+  flex-grow: 1;
 }
