--- a/styles/founderspagemain.css
+++ b/styles/founderspagemain.css
@@ -1,3 +1,22 @@
+body{
+  background-color:white;
+}
+ul{
+  background: teal;
+  padding: 20px;
+}
+
+ul li{
+
+  padding: 5px;
+  margin-left: 35px;
+}
+
+img{
+  width: 100%;
+  height: auto;
+}
+
   h1{
 	color:blue;
 	font-size:40px;
