--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -34,6 +34,7 @@ body {
     padding: 10px 10px 10px 10px;
     overflow-y: auto;
     height: 85vh;
+    margin-left: 10px;
 }
 
 #message-interaction {
