--- a/styles/main.css
+++ b/styles/main.css
@@ -27,9 +27,10 @@
 }
 
 .message-container {
-    display: block;
+    display: flex;
+    flex-direction: row; /*switch*/
+    justify-content: flex-start; /*switch*/
     margin-top: 10px;
-    border-top: 1px solid #f3f3f3;
     padding-top: 10px;
     opacity: 0;
     transition: opacity 1s ease-in-out;
@@ -46,31 +47,25 @@
     height: 35px;
     background-size: 35px;
     border-radius: 30px;
-    margin-right: 7.5px;
+    margin-right: 7.5px; /*switch*/
 }
 
-.message-container .spacing {
-    display: table-cell;
-    vertical-align: top;
-}
 
 
 /*message text container*/
 
 .message-container .message {
     box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
-    color: white;
-    display: table-cell;
+    color: white; /*switch*/
     max-width: 35vw;
     padding: 5px 10px 5px 10px;
-    background: #009688;
+    background: #80CBC4; /*switch*/
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
-    border-radius: 2px;
-
+    border-radius: 4px;
   }
 
-.message-container .message:after {
+/*.message-container .message:after {
   content: '';
   position: absolute;
   border-style: solid;
@@ -81,16 +76,13 @@
   z-index: 1;
   left: -15px;
   top: 45px;
-}
+}*/
 
 .message-container .name {
-    display: inline-block;
-    width: 100%;
-    padding-left: 40px;
+    margin-left: 7.5px; /*switch*/
     color: #bbb;
     font-style: italic;
     font-size: 12px;
-    box-sizing: border-box;
 }
 
 
@@ -133,11 +125,11 @@
     padding-left: 20px;
 }*/
 
-#image-form #submitImage {
+/*#image-form #submitImage {
     width: auto;
     padding: 0 6px 0 1px;
     min-width: 0;
-}
+}*/
 
 
 /*#image-form #submitImage .material-icons {
@@ -146,5 +138,5 @@
 
 
 #mediaCapture {
-    display: none;
+    /*display: none;*/
 }
