Fixed preloader not appearing again

--- a/styles/login.css
+++ b/styles/login.css
@@ -1,5 +1,5 @@
 body {
-    background: : #44A08D;
+    background:  #44A08D;
     /* For browsers that do not support gradients */
     background: -webkit-linear-gradient(#44A08D, #093637);
     /* For Safari 5.1 to 6.0 */
