Removed floating action button and replaced with regular button

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,12 @@
      flex-grow: 1;
  }
  
+
+ #add-conversation-button {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
  .message-container:first-of-type {
      border-top-width: 0;
  }
