--- a/styles/main.css
+++ b/styles/main.css
@@ -63,12 +63,14 @@
  /*message text container*/
  
  .message-container .message {
+     font-weight: 300;
      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
-     color: white;
+     color: #040404;
      /*switch*/
      max-width: 35vw;
      padding: 5px 10px 5px 10px;
-     background: #4DB6AC;
+     /*background: #E5E5EA;*/
+     background: #DFDFDF;
      /*switch*/
      -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
