--- a/landingpage.css
+++ b/landingpage.css
@@ -3,6 +3,10 @@ html{
 }
 
 body{
+	background: rgb(245,245,245);
+	color: teal;
+	font-size: 25px;
+	font-family: Helvetica;
 	height: 100%
 	margin: 0;
 	padding: 0;
@@ -18,6 +22,29 @@ header{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+}
+
+h1{
+	font-family: Courier;
+	color: black;
+	font-weight: lighter;
+	font-size: 10px;
+}
+
+h4{
+	font-family: Courier;
+	color:red;
+	font-weight:lighter;
+	font-size:8px;
+}
+
+a{
+	color:yellow;
+}
+
+a:hover{
+	text-decoration: none;
+	color:green;
 }
 
 p{
