--- a/landingpage.css
+++ b/landingpage.css
@@ -1,52 +1,77 @@
-html{
-	height: 100%
+@import url ('https://fonts.googleleapis.com/css?family=Raleway');
+@import url ('https://fonts.googleleapis.com/css?family=Oswald');
+
+html,body{
+	margin:0;
+	padding:0;
+	height: 100%;
+	width:100%;
 }
 
-body{
-	background: rgb(245,245,245);
-	color: teal;
-	font-size: 25px;
-	font-family: Helvetica;
-	height: 100%
-	margin: 0;
-	padding: 0;
-}
-
-header{
-	background-image: url(messagingsite.jpg);
+.intro{
 	height:100%;
-	background-size: cover;
-	color: #fff;
-	font-family: 'Arial';
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	width:100%;
+	margin:auto;
+	display:table;
+	top:0;
+	background-size:cover;
 }
 
-h1{
-	font-family: Courier;
-	color: black;
-	font-weight: lighter;
-	font-size: 10px;
+.intro.inner{
+	display:table-cell;
+	vertical-align: middle;
+	width: 100%;
+	height:100%;
 }
 
-h4{
-	font-family: Courier;
-	color:red;
-	font-weight:lighter;
-	font-size:8px;
+.content{
+	max-width: 500px;
+	margin:auto;
+	text-align: center;
 }
 
-a{
-	color:yellow;
+.content h1{
+	font-family:'Raleway',Sans-serif;
+	color:#F9F3F4;
+	text-shadow: 0px 0px 300px #000;
+	font-size:100px;
 }
 
-a:hover{
+.btn{
+	border-radius:9px;
+	font-family:'Oswald',Sans-serif;
+	color:#036A81;
+	font-size:135%;
+	padding: 10px 20px; 
+	border:solid #036A81 3px;
+	text-transform: uppercase;
 	text-decoration: none;
-	color:green;
+}
+
+.btn:hover{
+color:#fff;
+border:solid #fff 3px;
 }
 
 p{
-	
+font-size: 400%;
+line-height:210%;
+text-align:justify;
+margin:3%;
+font-family:sans-serif;
+}
+
+@media screen and (max-width:760px){
+	.content h1{
+		font-size:250px;
+	}
+
+.btn{
+	font-size:110%;
+	padding:7px 15px;
+}
+
+p{
+	font-size:100%;
+	line-height:160;
 }
