--- a/landingpage.css
+++ b/landingpage.css
@@ -6,12 +6,14 @@ html,body{
 	padding:0;
 	height: 100%;
 	width:100%;
+	background-color: lightblue;
 }
 
 .intro{
 	height:100%;
 	width:100%;
 	margin:auto;
+	background:url(https://files.slack.com/files-tmb/T1UER92E9-F55AJ740M-e5e2b153b6/base_360.png) no-repeat 50% 50%;
 	display:table;
 	top:0;
 	background-size:cover;
@@ -32,7 +34,7 @@ html,body{
 
 .content h1{
 	font-family:'Raleway',Sans-serif;
-	color:#F9F3F4;
+	color:green;
 	text-shadow: 0px 0px 300px #000;
 	font-size:100px;
 }
