--- a/landingpage.css
+++ b/landingpage.css
@@ -6,7 +6,7 @@ html,body{
 	padding:0;
 	height: 100%;
 	width:100%;
-	background-color: lightblue;
+	background-color: teal;
 }
 
 .intro{
@@ -34,7 +34,7 @@ html,body{
 
 .content h1{
 	font-family:'Raleway',Sans-serif;
-	color:green;
+	color:white;
 	text-shadow: 0px 0px 300px #000;
 	font-size:90px;
 }
