Started Fixing Some of the Pages

--- a/landingpage.css
+++ b/landingpage.css
@@ -13,7 +13,7 @@ html,body{
 	height:100%;
 	width:100%;
 	margin:auto;
-	background:url(https://files.slack.com/files-tmb/T1UER92E9-F55AJ740M-e5e2b153b6/base_360.png) no-repeat 50% 50%;
+	background:url(https://shsappdev2016-2017.slack.com/files/ryan/F57FA398T/base_recolored.png) no-repeat 50% 50%;
 	display:table;
 	top:0;
 	background-size:cover;
