--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -10,7 +10,7 @@ body {
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 35px;
 	font-weight: 300;
 }
 
@@ -33,15 +33,15 @@ h2 {
 
 #intro-div {
 	position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
+	margin: auto;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
 #www-logo {
@@ -52,7 +52,7 @@ h2 {
 	margin-top: 20px;
 	margin-bottom: 20px;
 	font-size: 20px;
-	height: 60px;
+	min-height: 7vh;
 	display: inline-flex;
 	align-items: center;
 }
@@ -60,7 +60,7 @@ h2 {
 #about-button {
 	color: white;
 	font-size: 15px;
-	width: 130px;
+	min-width: 10vw;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
@@ -69,9 +69,8 @@ h2 {
 #founders-button {
 	color: white;
 	font-size: 15px;
-	width: 130px;
+	min-width: 10vw;
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
 }
-
