--- a/styles/stat-summary.css
+++ b/styles/stat-summary.css
@@ -1,12 +1,21 @@
 body {
-    background:  #44A08D;
-    /* For browsers that do not support gradients */
-    background: -webkit-linear-gradient(#44A08D, #093637);
-    /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(#44A08D, #093637);
-    /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(#44A08D, #093637);
-    /* For Firefox 3.6 to 15 */
-    background: linear-gradient(#44A08D, #093637);
-    /* Standard syntax */
+    background-color: #009688;
+     display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+
+}
+
+#user-card {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+}
+
+#back-button {
+    align-self: center;
 }
