--- a/styles/landingpage.css
+++ b/styles/landingpage.css
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+/*<<<<<<< HEAD
 @import url ('https://fonts.googleleapis.com/css?family=Raleway');
 @import url ('https://fonts.googleleapis.com/css?family=Oswald');
 
@@ -8,7 +8,7 @@ html,body{
 	height: 100%;
 	width:100%;
 	background-color: teal;
-=======
+=======*/
 body {
 	display: flex;
 	flex-direction: column;
@@ -18,7 +18,7 @@ body {
 	background-color: #009688;
 	text-align: center;
 	color: white;
->>>>>>> master
+/*>>>>>>> master*/
 }
 
 h1 {
@@ -37,18 +37,18 @@ h2 {
 	font-weight: 300;
 }
 
-<<<<<<< HEAD
+/*<<<<<<< HEAD
 .content h1{
 	font-family:'Raleway',Sans-serif;
 	color:white;
 	text-shadow: 0px 0px 300px #000;
 	font-size:90px;
-=======
+=======*/
 @media (min-width: 700px) {
 	h2 {
 		font-size: 50px;
 	}
->>>>>>> master
+/*>>>>>>> master*/
 }
 
 #intro-div {
