--- a/styles/landingpage_save.css
+++ b/styles/landingpage_save.css
@@ -1,3 +1,14 @@
+/*<<<<<<< HEAD
+@import url ('https://fonts.googleleapis.com/css?family=Raleway');
+@import url ('https://fonts.googleleapis.com/css?family=Oswald');
+
+html,body{
+	margin:0;
+	padding:0;
+	height: 100%;
+	width:100%;
+	background-color: teal;
+=======*/
 body {
 	display: flex;
 	flex-direction: column;
@@ -7,6 +18,7 @@ body {
 	background-color: #009688;
 	text-align: center;
 	color: white;
+/*>>>>>>> master*/
 }
 
 h1 {
@@ -25,10 +37,18 @@ h2 {
 	font-weight: 300;
 }
 
+/*<<<<<<< HEAD
+.content h1{
+	font-family:'Raleway',Sans-serif;
+	color:white;
+	text-shadow: 0px 0px 300px #000;
+	font-size:90px;
+=======*/
 @media (min-width: 700px) {
 	h2 {
 		font-size: 50px;
 	}
+/*>>>>>>> master*/
 }
 
 #intro-div {
