MVP Educator suite done. Users in other schools show.

--- a/educator/educator-dashboard.css
+++ b/educator/educator-dashboard.css
@@ -284,4 +284,4 @@ body {
   padding: 5px 15px 0px 15px;
   margin-top: 0px; }
 
-/*# sourceMappingURL=dashboard.css.map */
+/*# sourceMappingURL=../styles/dashboard.css.map */
