Added more things to the About Page. It still needs to be styled a little. The pictures are still not appearing for the slider and parallax pictures.

--- a/styles/aboutpagemain.css
+++ b/styles/aboutpagemain.css
@@ -1,5 +1,5 @@
 body {
-  background-color: teal;
+  background-color: #26a69a;
     display: flex;
     min-height: 100vh;
     flex-direction: column;
