--- a/styles/school-page.css
+++ b/styles/school-page.css
@@ -222,52 +222,53 @@ body {
   justify-content: center;
 }
 
-#sidebar {
-  margin-top: 5px;
+
+
+h1 {
+  color: white;
+  font-weight: 300;
+  text-align: center;
+  font-size: 50px;
 }
 
-#nav-bar {
-  padding-left: 10px;
-  padding-right: 10px;
-  font-weight: 200; }
-
-  h1 {
-    color: white;
-    font-weight: 300;
-    text-align: center;
-    font-size: 50px;
-  }
-
-  h3 {
-    color: white;
-    font-weight: 100;
-    text-align: center;
-    font-size: 30px;
-  }
-
-  #add-school-btn {
-    margin:0 auto;
-    display:block;
-    width: 300px;
-  }
-
-  #users-container {
-     margin: 30px auto 30px auto;
-     width: 500px;
-    text-align: left;
-  }
-
-  .active-green-circle {
-      width: 10px;
-      height: 10px;
-      -webkit-border-radius: 25px;
-      -moz-border-radius: 25px;
-      border-radius: 25px;
-      background: green;
-      display: inline-block;
-      margin: 5px;
+h3 {
+  color: white;
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px;
 }
 
+
+#users-container {
+   margin: 30px auto 30px auto;
+   width: 500px;
+  text-align: left;
+}
+
+.active-green-circle {
+    width: 10px;
+    height: 10px;
+    -webkit-border-radius: 25px;
+    -moz-border-radius: 25px;
+    border-radius: 25px;
+    background: green;
+    display: inline-block;
+    margin: 5px;
+}
+
+.loader-red-small {
+    border: 6px solid #f3f3f3; /* Light grey */
+    border-top: 6px solid #ED5454; /* nice red */
+    border-radius: 50%;
+    width: 41px;
+    height: 41px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 #user-pic {
   background-image: url("/images/profile_placeholder.png");
   background-repeat: no-repeat;
